Gated all components in App.js and wrote all test files for related and comparison

--- a/atelier/public/styles/related-items/_related_items.scss
+++ b/atelier/public/styles/related-items/_related_items.scss
@@ -139,11 +139,12 @@
   .card-stars{
     display: flex;
   }
-
 }
 
 .related-modal{
   position: fixed;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
   right: 0;
