Organzing product-summary added position: relative to product-summary; shopping cart scss updated to position drop down menu and quantity selector;
ShopingCart refactored to have custom made select options made with div
SizeSelector now has ability to turn off options

--- a/atelier/public/styles/overview/_product-summary.scss
+++ b/atelier/public/styles/overview/_product-summary.scss
@@ -1,6 +1,7 @@
 .product-summary {
   width: 30vh;
   padding: 2vh;
+  position: relative;
   .card-price{
     font-size: medium;
     display: flex;
@@ -21,5 +22,7 @@
   }
   h1 {
     margin-bottom: 1vh;
+  }
+  .share-buttons {
   }
 }
