--- a/atelier/public/styles/overview/_slogan.scss
+++ b/atelier/public/styles/overview/_slogan.scss
@@ -15,5 +15,25 @@
     float: right;
     width: 30vh;
     padding: 5vh;
+    .features{
+      padding-left: 1vh;
+      list-style: none;
+      li{
+        margin-bottom: 1vh;
+      }
+      li:before{
+        content: "\f00c";
+        font-family: FontAwesome;
+        margin: 0 .5vh 0 -0.3vh;
+      }
+    }
   }
 }
+
+// ul { padding-left:20px; list-style:none; }
+// li { margin-bottom:10px; }
+// li:before {
+//     font-family: 'FontAwesome';
+//     content: '\f067';
+//     margin:0 5px 0 -15px;
+// }
