--- a/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
+++ b/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
@@ -173,50 +173,99 @@
 
   .modal {
     position: fixed;
-    z-index: 1;
+    z-index: 20;
     left: 0;
     top: 0;
-    height: 100%;
     width: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
   }
 
   .modal-content {
-    overflow: auto;
-    padding: 10%;
+    display:flex;
+    position: relative;
+    top: -3rem;
+    left: 25%;
+    margin-bottom: 4%;
+    justify-content: flex-start;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 4%;
     background-color: #f4f4f4;
-    margin: 30% auto;
-    height: 80%;
-    width: 90%;
-    table {
-      padding: 10px;
-      display: flex;
-      justify-content: flex-start;
-      width: 100%;
-      formfield {
-        margin-right: 10px;
-        display:inline-block;
-        label {
-          font-size: small;
-        }
+    width: 50%;
+    height: 100vh;
+    overflow: auto;
+    h4 {
+      color: gray;
+      font-size: 2rem;
+    }
+    .recommendation{
+      margin: 0.5rem auto;
+      font-size: 0.8rem;
+      #recommend-yes, #recommend-no {
+        border: 0px;
+        height: 0.75rem;
       }
     }
     textarea {
-      width: 90%;
-      height: 80%;
+      width: 400px;
+      height: 100px
+    }
+    .image-upload {
+      img {
+        height: 200px;
+        width: 200px;
+        display: block;
+      }
+    }
+
+
+  }
+}
+
+table {
+  margin: 2rem auto;
+  align: center;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  div {
+    margin-right: 10px;
+    display:inline-block;
+    label {
+      font-size: small;
     }
   }
 }
 
-.image-upload {
-  img {
-    height: 200px;
-    width: 200px;
-    display: inline-block;
-  }
-}
+
 
 #recommend-product {
   font-size: 0.7rem;
 }
+
+.rate {
+  height: 46px;
+  padding: 0 10px;
+  display:flex;
+  justify-content: right;
+  right: 420px;
+}
+.rate:not(:checked) > input {
+  position: absolute;
+  top: -9999px;
+}
+.rate:not(:checked) > label {
+  float: right;
+  width: 1em;
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+  font-size: 30px;
+  color: #ccc;
+}
+.rate:not(:checked) > label:before { content: '★ '; }
+.rate > input:checked ~ label { color: #ffc700; }
+.rate:not(:checked) > label:hover, .rate:not(:checked) > label:hover ~ label { color: #deb217; }
+.rate > input:checked + label:hover, .rate > input:checked + label:hover ~ label, .rate > input:checked ~ label:hover, .rate > input:checked ~ label:hover ~ label, .rate > label:hover ~ input:checked ~ label { color: #c59b08; }
