--- a/atelier/public/styles/overview/_overview.scss
+++ b/atelier/public/styles/overview/_overview.scss
@@ -3,6 +3,7 @@
 @import './style-selector';
 @import './slogan';
 @import './product-summary';
+@import './expanded-image-gallery';
 
 .image-gallery {
   float: left;
@@ -18,6 +19,5 @@
 .image-summary {
   display: flex;
   justify-content: center;
-
 }
 
