--- a/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
+++ b/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
@@ -82,6 +82,7 @@
   /*for the Ratings Component*/
   .ratings {
     /*make the parent container relative so children can use absolute positioning*/
+    min-width: auto;
     position: relative;
     width: 35%;
     h5 {
@@ -186,12 +187,11 @@
   .modal-content {
     display:flex;
     position: relative;
-    top: -3rem;
     left: 25%;
-    margin-bottom: 4%;
-    justify-content: flex-start;
-    font-family: Arial, Helvetica, sans-serif;
+    top: 3rem;
     padding: 4%;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #f4f4f4;
     width: 50%;
     height: 100vh;
@@ -246,11 +246,10 @@ table {
 }
 
 .rate {
-  height: 46px;
-  padding: 0 10px;
-  display:flex;
-  justify-content: right;
-  right: 420px;
+  height: 50px;
+  width: 200px;
+  position: relative;
+  right:50px;
 }
 .rate:not(:checked) > input {
   position: absolute;
@@ -269,3 +268,4 @@ table {
 .rate > input:checked ~ label { color: #ffc700; }
 .rate:not(:checked) > label:hover, .rate:not(:checked) > label:hover ~ label { color: #deb217; }
 .rate > input:checked + label:hover, .rate > input:checked + label:hover ~ label, .rate > input:checked ~ label:hover, .rate > input:checked ~ label:hover ~ label, .rate > label:hover ~ input:checked ~ label { color: #c59b08; }
+
