--- a/atelier/public/styles/overview/_expanded-image-gallery.scss
+++ b/atelier/public/styles/overview/_expanded-image-gallery.scss
@@ -5,14 +5,14 @@
   justify-content: center;
   align-items: center;
   background: gray;
-  width: 200vh;
+  width: 100vw;
   aspect-ratio: 8 / 5;
   position: relative;
 
   .expanded-expand-button {
     position: absolute;
-    top:1vh;
-    right:1vh;
+    top:1vw;
+    right:1vw;
     z-index: 10;
   }
 
@@ -24,43 +24,43 @@
     // Thumbnails
     .expanded-thumbnail-previous {
       position: absolute;
-      top: 1vh;
-      left: 5vh;
-      height: 3vh;
+      top: 1vw;
+      left: 5vw;
+      height: 3vw;
       z-index: 9;
     }
     .expanded-thumbnail-next{
       position: absolute;
-      height: 3vh;
-      left: 5vh;
-      bottom: 1vh;
+      height: 3vw;
+      left: 5vw;
+      bottom: 1vw;
       z-index: 9;
     }
     .expanded-thumbnails {
       align-items: center;
       display: flex;
-      top: 4vh;
+      top: 4vw;
       flex-direction: column;
       overflow: hidden;
       position: absolute;
-      left: 1vh;
+      left: 1vw;
       z-index: 9;
-      width: 9vh;
-      height: 42vh;
+      width: 9vw;
+      height: 42vw;
       .expanded-thumbnails-container {
-        width: 9vh;
+        width: 9vw;
       }
       .expanded-thumbnail {
-        margin-bottom: 0.5vh;
+        margin-bottom: 0.5vw;
         display: flex;
         width: 100%;
-        height: 5.5vh;
+        height: 5.5vw;
         z-index: 9;
         overflow: hidden;
         justify-content: center;
         img {
           display: flex;
-          height: 10vh;
+          height: 10vw;
           width: auto;
         }
       }
@@ -95,7 +95,7 @@
     .expanded-main-image {
       display: flex;
       justify-content: center;
-      width: 80vh;
+      width: 80vw;
       transition: 2s;
       height: 100%;
       overflow: hidden;
@@ -103,7 +103,7 @@
 
       img {
         width: auto;
-        max-height: 50vh;
+        max-height: 50vw;
         object-fit: cover;
         height: 100%;
         z-index: 8;
