--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -133,6 +133,8 @@
 
 .related-modal {
   position: fixed;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
   right: 0;
@@ -433,13 +435,14 @@
 }
 .ratings-reviews .modal {
   position: fixed;
-  z-index: 1;
+  z-index: 20;
   left: 0;
   top: 0;
-  height: 100%;
   width: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
 }
 .ratings-reviews .modal-content {
   display: flex;
@@ -454,17 +457,40 @@
   height: 100vh;
   overflow: auto;
 }
-.ratings-reviews .modal-content table {
-  padding: 10px;
+.ratings-reviews .modal-content h4 {
+  color: gray;
+  font-size: 2rem;
+}
+.ratings-reviews .modal-content .recommendation {
+  margin: 0.5rem auto;
+  font-size: 0.8rem;
+}
+.ratings-reviews .modal-content .recommendation #recommend-yes, .ratings-reviews .modal-content .recommendation #recommend-no {
+  border: 0px;
+  height: 0.75rem;
+}
+.ratings-reviews .modal-content textarea {
+  width: 400px;
+  height: 100px;
+}
+.ratings-reviews .modal-content .image-upload img {
+  height: 200px;
+  width: 200px;
+  display: block;
+}
+
+table {
+  margin: 2rem auto;
+  align: center;
   display: flex;
   justify-content: flex-start;
   width: 100%;
 }
-.ratings-reviews .modal-content table formfield {
+table div {
   margin-right: 10px;
   display: inline-block;
 }
-.ratings-reviews .modal-content table formfield label {
+table div label {
   font-size: small;
 }
 
@@ -500,21 +526,14 @@
 
 .rate > input:checked ~ label {
   color: #ffc700;
-  
-.ratings-reviews .modal-content textarea {
-  width: 90%;
-  height: 80%;
-
 }
 
-.image-upload img {
-  height: 200px;
-  width: 200px;
-  display: inline-block;
+.rate:not(:checked) > label:hover, .rate:not(:checked) > label:hover ~ label {
+  color: #deb217;
 }
 
-#recommend-product {
-  font-size: 0.7rem;
+.rate > input:checked + label:hover, .rate > input:checked + label:hover ~ label, .rate > input:checked ~ label:hover, .rate > input:checked ~ label:hover ~ label, .rate > label:hover ~ input:checked ~ label {
+  color: #c59b08;
 }
 
 .image-gallery {
