--- a/atelier/public/styles/overview/_expanded-image-gallery.scss
+++ b/atelier/public/styles/overview/_expanded-image-gallery.scss
@@ -6,7 +6,7 @@
   align-items: center;
   background: gray;
   width: 100vw;
-  aspect-ratio: 8 / 5;
+  aspect-ratio: 8 / 3.5;
   position: relative;
 
   .expanded-expand-button {
@@ -24,42 +24,46 @@
     // Thumbnails
     .expanded-thumbnail-previous {
       position: absolute;
-      top: 1vw;
-      left: 5vw;
+      top: 4vw;
+      left: 2.15vw;
       height: 3vw;
+      font-size: 2vw;
       z-index: 9;
     }
     .expanded-thumbnail-next{
       position: absolute;
       height: 3vw;
-      left: 5vw;
-      bottom: 1vw;
+      left: 2.15vw;
+      bottom: 4vw;
+      font-size: 2vw;
       z-index: 9;
     }
     .expanded-thumbnails {
       align-items: center;
       display: flex;
-      top: 4vw;
+      top: 6.25vw;
       flex-direction: column;
       overflow: hidden;
       position: absolute;
       left: 1vw;
       z-index: 9;
       width: 9vw;
-      height: 42vw;
+      height: 31.5vw;
       .expanded-thumbnails-container {
         width: 9vw;
       }
       .expanded-thumbnail {
-        margin-bottom: 0.5vw;
+        margin-bottom: 1vw;
         display: flex;
-        width: 100%;
-        height: 5.5vw;
+        width: 3.5vw;
+        height: 3.5vw;
+        border-radius: 50%;
         z-index: 9;
+        background-color: white;
         overflow: hidden;
         justify-content: center;
         img {
-          display: flex;
+          display: none;
           height: 10vw;
           width: auto;
         }
@@ -72,7 +76,7 @@
       color: blanchedalmond;
       position: absolute;
       top: 50%;
-      left: 17%;
+      left: 8vw;
       z-index: 9;
     }
 
@@ -95,19 +99,22 @@
     .expanded-main-image {
       display: flex;
       justify-content: center;
-      width: 80vw;
+      width: 100vw;
       transition: 2s;
       height: 100%;
       overflow: hidden;
 
 
       img {
+        background-position: center;
+        transition: opacity .5s;
         width: auto;
-        max-height: 50vw;
+        max-height: 43.75vw;
         object-fit: cover;
         height: 100%;
         z-index: 8;
-        cursor:zoom-in;
+        cursor: cell;
+        overflow: hidden;
       }
     }
   }
