--- a/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
+++ b/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
@@ -10,6 +10,7 @@
     text-align: left;
     width: 30rem;
     margin: 5%;
+    max-height: 90vh;
     font-size: 0.875rem;
     position: relative;
     right: 40px;
